--- a/stuff/bootstrap/variables.less
+++ b/stuff/bootstrap/variables.less
@@ -713,9 +713,9 @@
 @panel-inner-border:          #ddd;
 @panel-footer-bg:             #f5f5f5;
 
-@panel-default-text:          @gray-dark;
+@panel-default-text:          var(--text-color);
 @panel-default-border:        var(--border-color);
-@panel-default-heading-bg:    #f5f5f5;
+@panel-default-heading-bg:    var(--panel-default-heading-bg);
 
 @panel-primary-text:          #fff;
 @panel-primary-border:        @brand-primary;
